# ghirahim_rs

./: .gitignore  .rusty-hook.toml  Cargo.toml  LICENSE  README.rst  ghirahim.yaml.sample
.github/workflows/: build.yml  deploy.yml  workflow_test.yml
.guppy/: hakari.toml
ghirahim_bot/: Cargo.toml
ghirahim_bot/src/: main.rs  tokens.rs
libghirahim/: Cargo.toml
libghirahim/src/: lib.rs
workspace-hack/: Cargo.toml
