[package]
name    = "ghirahim_bot"
version = "1.1.1"
edition = "2018"

[dependencies]
twitch-irc = { version = "4.0", features = ["transport-ws-rustls-webpki-roots", "metrics-collection"] }
tokio = { version = "1.12", features = ["rt", "rt-multi-thread", "macros"] }
serde = "1.0"
serde_yaml = "0.8"
tldextract = "0.5"
tempfile = "3.2"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "=0.3.11", features = ["env-filter"] }
tracing-log = "0.1"
tracing-bunyan-formatter = "0.3"
libghirahim = { path = "../libghirahim" }
nom = "7.0"
governor = "0.3"
nonzero_ext = "0.3"
pkg-version = "1.0"
lazy_static = "1.4"
metrics = "0.18"
metrics-exporter-prometheus = { version = "0.6", features = ["tokio-exporter"] }
workspace-hack = { path = "../workspace-hack" }
