[package]
name    = "ghirahim_bot"
version = "2.0.0"
edition = "2018"

[dependencies]
twitch-irc = { version = "4.0", features = ["transport-ws-rustls-webpki-roots", "metrics-collection"] }
tokio = { version = "1.20", features = ["rt", "rt-multi-thread", "macros"] }
serde = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
tldextract = "0.6.0"
tempfile = "3.2"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "=0.3.11", features = ["env-filter"] }
tracing-log = "0.1"
tracing-bunyan-formatter = "0.3"
libghirahim = { path = "../libghirahim" }
nom = "7.0"
governor = "0.4"
nonzero_ext = "0.3"
pkg-version = "1.0"
lazy_static = "1.4"
metrics = "0.18"
metrics-exporter-prometheus = { version = "0.11.0", features = ["http-listener"] }
reqwest = { version = "0.11", features = ["json"] }
tower = { version = "0.4", features = ["limit"] }
workspace-hack = { path = "../workspace-hack" }
