[package]
name    = "ghirahim_bot"
version = "2.2.1"
edition = "2018"

[dependencies]
twitch-irc = { version = "5.0", features = ["transport-ws-rustls-webpki-roots", "metrics-collection", "refreshing-token-rustls-webpki-roots"] }
tokio = { version = "1.25", features = ["rt", "rt-multi-thread", "macros", "time"] }
serde = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
tldextract = "0.6"
tempfile = "3.2"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.1"
tracing-bunyan-formatter = "0.3"
libghirahim = { path = "../libghirahim" }
nom = "7.0"
governor = "0.5"
nonzero_ext = "0.3"
pkg-version = "1.0"
lazy_static = "1.4"
prometheus = "0.13"
reqwest = { version = "0.11", features = ["json", "rustls"] }
tower = { version = "0.4", features = ["limit"] }
async-trait = "0.1"
workspace-hack = { path = "../workspace-hack" }
hyper = { version = "0.14", features = ["http1", "server"] }

# helper dependencies
tiny_http = { version = "0.12", optional = true }
text_io = { version = "0.1", optional = true }
form_urlencoded = { version = "1.1.0", optional = true }
colored = { version = "2", optional = true }
url = { version = "2", optional = true }

[features]
helper = ["dep:tiny_http", "dep:text_io", "dep:form_urlencoded", "dep:colored", "dep:url", "reqwest/blocking"]

[[bin]]
name = "token_helper"
required-features = ["helper"]