[package]
name    = "libghirahim"
version = "1.1.2"
edition = "2018"

[dependencies]
strum = { version = "0.24", features = ["derive"] }
twitch-irc = { version = "4.0" }
tldextract = "0.5.1"
url = "2.2.2"
tokio = { version = "1.12.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
] }
regex = "1.6.0"
futures = "0.3.17"
workspace-hack = { path = "../workspace-hack" }
mongodb = "2.0.0"
redis = { version = "0.21.2", features = [
    "aio",
    "tokio-comp",
    "connection-manager",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1.29"
tracing-futures = "0.2.5"
pkg-version = "1.0.0"

[dev-dependencies]
tempfile = "3.2.0"
