[package]
name    = "libghirahim"
version = "1.1.5"
edition = "2018"

[dependencies]
strum = { version = "0.24", features = ["derive"] }
twitch-irc = { version = "5.0" }
tldextract = "0.6"
url = "2"
tokio = { version = "1.21", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
] }
regex = "1.6"
futures = "0.3.25"
workspace-hack = { path = "../workspace-hack" }
mongodb = "2.3"
redis = { version = "0.22", features = [
    "aio",
    "tokio-comp",
    "connection-manager",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-futures = "0.2"
pkg-version = "1.0"

[dev-dependencies]
tempfile = "3.2"
